# snake-game

./: README.md  __init__.py  main.py  pyproject.toml  ruff.toml
.github/workflows/: code-quality.yaml  test.yaml
snake_game/: __init__.py
snake_game/src/: __init__.py  game.py  models.py  utils.py
tests/: __init__.py  conftest.py  test_game.py  test_integration.py  test_models.py  test_utils.py
