[project]
name = "snake-game"
version = "0.1.0"
description = "Snake Game using Pygame"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pygame==2.1",
]

[dependency-groups]
dev = [
    "bandit[toml]==1.8.6",
    "pip-audit==2.9.0",
    "pytest==8.4.1",
    "ruff==0.12.9",
]
